/*
Copyright IBM Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

option go_package = "github.com/hyperledger/fabric-x-orderer/node/protos/comm";

package comm;

message SubmitResponse {
  string error = 1;
  bytes reqID = 2;
  bytes trace_id = 3;
}

message Request {
  bytes payload = 1;
  bytes signature = 2;
  bytes identity = 3;
  uint32 identity_id = 4;
  bytes trace_id = 5;
  uint32 config_seq = 6;
}

service RequestTransmit {
  rpc Submit(Request) returns (SubmitResponse);
  rpc SubmitStream(stream Request) returns (stream SubmitResponse);
}

message EventResponse {
  string error = 1;
}

message Event {
  bytes payload = 1;
}

service Consensus {
  rpc NotifyEvent(stream Event) returns (stream EventResponse);
  rpc SubmitConfig(Request) returns (SubmitResponse);
}

message Ack {
  uint32 shard = 1;
  uint64 seq = 2;
}

message AckResponse {
  string error = 1;
}

message FwdRequest {
  bytes request = 1;
}

message FwdRequestResponse {
  string error = 1;
}

service BatcherControlService {
  rpc NotifyAck(stream Ack) returns (stream AckResponse);
  rpc FwdRequestStream(stream FwdRequest) returns (stream FwdRequestResponse);
}